# llvm_quick

./: Cargo.toml  README.md  README_CN.md  rustfmt.toml
.github/workflows/: rust.yml
examples/: disassembler.rs  jit-function.rs  jit.rs  nop-function.rs
src/: analysis.rs  basic_block.rs  bit_reader.rs  bit_writer.rs  blake3.rs  builder.rs  comdat.rs  context.rs  debuginfo.rs  diagnostic_info.rs  disassembler.rs  error.rs  error_handle.rs  error_handling.rs  execution_engine.rs  ir_reader.rs  lib.rs  linker.rs  llvm.rs  lto.rs  memory_buffer.rs  message.rs  metadata.rs  module.rs  object.rs  opaque.rs  owning.rs  pass_builder.rs  remark.rs  support.rs  target.rs  target_machine.rs  type_tag.rs  types.rs  util.rs  values.rs
src/core/: attribute.rs  basic_block.rs  builder.rs  context.rs  contexts.rs  diagnostic.rs  instruction_builders.rs  instructions.rs  memory_buffer.rs  memory_buffers.rs  message.rs  metadata.rs  mod.rs  module.rs  module_provider.rs  module_providers.rs  modules.rs  pass_manager.rs  pass_managers.rs  threading.rs  types.rs  values.rs
src/core/type_tag/: arrays.rs  floats.rs  functions.rs  integers.rs  mod.rs  pointers.rs
src/core/types/: arrays.rs  float.rs  floats.rs  function.rs  functions.rs  integer.rs  integers.rs  mod.rs  other.rs  others.rs  pointers.rs  structs.rs  (+1 more)
src/orc2/: ee.rs  lljit.rs  mod.rs
src/transforms/: mod.rs  pass_builder.rs
src/type_tag/: array.rs  array_tag.rs  float.rs  float_tag.rs  function.rs  function_tag.rs  integer.rs  integer_tag.rs  mod.rs  pointer.rs  pointer_tag.rs
tests/: test.rs  type_tag_inline.rs
(+6 files in other folders)
